implements the JWT Support.

--- a/direct-deal-account-service/src/main/resources/messages.properties
+++ b/direct-deal-account-service/src/main/resources/messages.properties
@@ -8,3 +8,4 @@ account.exception.delete.message=Failed to delete the account({0})
 account.exception.changepassword.samepasswords.message=The new password is the same as the current password
 account.exception.changepassword.accountnotfound.message=Failed to find the account({0})
 account.exception.changepassword.passwordmismatch.message=Incorrect password
+accountdetailservice.exception.loaduserbyusername.accountnotfound.message=could not find the account({0})
