--- a/direct-deal-sale-service/src/main/resources/messages.properties
+++ b/direct-deal-sale-service/src/main/resources/messages.properties
@@ -1,5 +1,6 @@
 saleservice.exception.favoriteitemservice.delete.message=user({0}) does not have the item({1})
-
+saleservice.exception.itemcategoryservice.update.message=category id({0}) is not found.
+saleservice.exception.itemcategoryservice.delete.message=category id({0}) is not found.
 
 #account.constraint.name.size.message=The account name '${validatedValue}' must be between {min} and {max} characters long
 #account.constraint.password.size.message=The pasword must be between {min} and {max} characters long
