--- a/direct-deal-sale-service/src/main/resources/messages.properties
+++ b/direct-deal-sale-service/src/main/resources/messages.properties
@@ -1,6 +1,8 @@
-saleservice.exception.favoriteitemservice.delete.message=user({0}) does not have the item({1})
-saleservice.exception.itemcategoryservice.update.message=category id({0}) is not found.
-saleservice.exception.itemcategoryservice.delete.message=category id({0}) is not found.
+saleservice.exception.favoriteitemservice.delete.message=User({0}) does not have the item({1})
+saleservice.exception.itemcategoryservice.update.message=Category id({0}) is not found
+saleservice.exception.itemcategoryservice.delete.message=Category id({0}) is not found
+saleservice.exception.itemimageservice.readimage.fail.message=Failed to read the image({0})
+saleservice.exception.itemimageservice.saveimage.fail.message=Threre is no item images to save
 
 #account.constraint.name.size.message=The account name '${validatedValue}' must be between {min} and {max} characters long
 #account.constraint.password.size.message=The pasword must be between {min} and {max} characters long
