--- a/direct-deal-transaction-history-service/src/main/resources/messages.properties
+++ b/direct-deal-transaction-history-service/src/main/resources/messages.properties
@@ -3,6 +3,8 @@ transactionhistoryservice.exception.delete.transaction.notfound.message=Failed t
 buyhistoryservice.exception.delete.transaction.notfound.message=Failed to find the transaction(id={0},buyerid={1})
 buyhistoryservice.exception.insert.transaction.duplicate.message=The duplication of the buy history is occurred
 
+transactionhistorycontroller.exception.setbuyer.notthesame.message=userId({0}) is not the same as sellerId({1})
+
 #account.constraint.name.size.message=The account name '${validatedValue}' must be between {min} and {max} characters long
 #account.constraint.password.size.message=The pasword must be between {min} and {max} characters long
 #account.exception.get.message=Failed to find the account({0})
