--- a/direct-deal-sale-service/src/main/resources/messages.properties
+++ b/direct-deal-sale-service/src/main/resources/messages.properties
@@ -7,6 +7,8 @@ saleservice.exception.itemcategoryservice.delete.message=Category id({0}) is not
 saleservice.exception.itemimageservice.readimage.fail.message=Failed to read the image({0})
 saleservice.exception.itemimageservice.saveimage.fail.message=Threre is no item images to save
 saleservice.exception.itemimageservice.checkuploadstatus.notfound.message=image({0}) is not found
+saleservice.exception.itemimageservice.saveimages.cannotcreatedirectory.message=Could not create the image repository directory({0})
+
 
 saleservice.exception.saleitemaggregate.itemupdatecommand.notthesame.onwerid.message=User({0}) is not the same as seller({1})
 
