feat: Upgrade Spring Boot from 2.5.0 to 3.2.12
This commit performs a significant upgrade of the Spring Boot dependency
to version 3.2.12.  Key changes include:

- **Spring Boot Version:**  Updated from 2.5.0 to 3.2.12
- **Dependency Updates:**  Updated several Spring Boot dependencies
(e.g., `spring-boot-starter-security`, `spring-boot-starter-web`,
`spring-boot-starter-data-jpa`) to their respective 3.2.12 versions
- **Java Version:**  Requires Java 17 or later (due to Spring Boot 3's
Java 17 requirement)
- **Configuration Changes:** Updated to newer Spring Cloud version - `2023.0.6`
- **AxonFramework Version:**  Updated from 4.5.4 to 4.9.4

--- a/direct-deal-sale-service/src/main/resources/messages.properties
+++ b/direct-deal-sale-service/src/main/resources/messages.properties
@@ -8,6 +8,7 @@ saleservice.exception.itemimageservice.readimage.fail.message=Failed to read the
 saleservice.exception.itemimageservice.saveimage.fail.message=Threre is no item images to save
 saleservice.exception.itemimageservice.checkuploadstatus.notfound.message=image({0}) is not found
 saleservice.exception.itemimageservice.saveimages.cannotcreatedirectory.message=Could not create the image repository directory({0})
+saleservice.exception.itemimageservice.saveimages.cannotloadImage.message=Could not load a image({0})
 
 
 saleservice.exception.saleitemaggregate.itemupdatecommand.notthesame.onwerid.message=User({0}) is not the same as seller({1})
